@@ -3,7 +3,7 @@
 beersLaw=Beer's Law
 beersLawLab=Beer's Law Lab
 dilutions.name=Dilutions
-dilutionIntro=Dilution Intro
+dilution=Dilution
 full=full
 high=high
 koolAid=Kool-Aid\u00ae
