@@ -8,7 +8,7 @@ import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
 import edu.colorado.phet.dilutions.modules.BeersLawLabModule;
 import edu.colorado.phet.dilutions.modules.BeersLawModule;
-import edu.colorado.phet.dilutions.modules.DilutionIntroModule;
+import edu.colorado.phet.dilutions.modules.DilutionModule;
 import edu.colorado.phet.dilutions.modules.MakeDilutionsModule;
 import edu.colorado.phet.dilutions.modules.MolarityModule;
 
@@ -23,7 +23,7 @@ public class DilutionsApplication extends PiccoloPhetApplication {
         super( config );
         Frame frame = getPhetFrame();
         addModule( new MolarityModule( frame ) );
-        addModule( new DilutionIntroModule() );
+        addModule( new DilutionModule() );
         addModule( new MakeDilutionsModule() );
         addModule( new BeersLawModule() );
         addModule( new BeersLawLabModule() );
